<resources>
    <string name="app_name">키워드 뉴스</string>
    <string name="setting">설정</string>
    <string name="reset_list">리셋</string>
    <string name="title_activity_settings">설정</string>

    <!-- Preference Titles -->
    <string name="keyword_header">검색 카테고리</string>
    <string name="request_header">요청 카테고리</string>
    <string name="service_header">서비스 카테고리</string>

    <!-- keyword Preferences -->
    <string name="keywords">입력 키워드(키워드 구분자[,] 주식 구분자[#])</string>
    <string name="keywords_description">복수의 키워드는 ","로 구분하고, 주식종목코드는 "#"을 붙여주세요. \n(예.삼성전자#005930,코로나19,LG#003550)</string>
    <string name="search_engine">검색 엔진</string>
    <string name="result_reverse_order">검색결과 역순 정렬</string>
    <string name="article_maxnum">가져올 기사 최대 수 (최대 50)</string>

    <!-- request Preferences -->
    <string name="request_time">요청 시간 주기</string>

    <!-- service Preferences -->
    <string name="service_start">서비스 시작</string>
    <string name="server_url">서버 URL</string>

</resources>